[package]
edition      = "2024"
name         = "neon-beat-buzzer"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "log-04"
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3", "log-04"] }
log = "0.4.27"

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32c3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
embedded-websocket = { version  = "0.9.4", default-features = false }
embassy-sync = "0.7.2"
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.148", default-features = false, features = ["alloc"] }
embassy-futures = "0.1.2"
esp-hal-smartled = { version = "0.17.0", features = ["esp32c3"] }
smart-leds = "0.4.0"
libm = "0.2.15"

[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-hal-smartled = { path = "../esp-hal-community/esp-hal-smartled" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
