[package]
edition      = "2024"
name         = "neon-beat-buzzer"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "neon-beat-buzzer"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
esp-hal = { version = "1.0.0", default-features = false, features = ["esp32c3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", default-features = false, features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "log-04"
] }

esp-bootloader-esp-idf = { version = "0.4.0", default-features = false, features = ["esp32c3", "log-04"] }
log = "0.4.27"

embassy-net = { version = "0.7.1", default-features = false, features = [
  "dhcpv4",
  "log",
  "tcp",
] }
embedded-io = {version = "0.7.1", default-features = false}
embedded-io-async = {version = "0.7.0", default-features = false}
esp-alloc = {version = "0.9.0", default-features = false}
esp-println = { version = "0.16.1", default-features = false, features = [
	"esp32c3", "log-04", "uart"
]}
embassy-executor = { version = "0.9.1", default-features = false, features = ["log"] }
embassy-time = { version = "0.5.0", default-features = false, features = ["log"] }
esp-radio = { version = "0.17.0", default-features = false, features = [
  "esp-alloc",
  "esp32c3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "proto-dhcpv4",
  "proto-ipv4",
  "socket-tcp",
] }

critical-section = {version = "1.2.0", default-features = false}
static_cell      = {version = "2.1.1", default-features = false}
embedded-websocket = { version  = "0.9.4", default-features = false }
embassy-sync = {version = "0.7.2", default-features = false}
serde = { version = "1.0.228", default-features = false }
embassy-futures = {version = "0.1.2", default-features = false}
esp-hal-smartled = { version = "0.17.0", default-features = false, features = ["esp32c3"] }
smart-leds = {version = "0.4.0", default-features = false}
libm = {version = "0.2.15", default-features = false}
serde-json-core = {version = "0.6.0", default-features = false}

[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev="223815270092663682a151a1b285665587a3d5dd" }
esp-hal-smartled = { git = "https://github.com/Tropicao/esp-hal-community", rev="96dda7ac3490e2198e7556d3ed9004acfa1f537d"}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 0
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 'z'
overflow-checks  = false
strip            = true
