[package]
edition      = "2024"
name         = "neon-beat-buzzer"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "neon-beat-buzzer"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
esp-hal = { version = "~1.1.0", default-features = false, features = ["esp32c3", "log-04", "unstable"] }

esp-rtos = { version = "0.3.0", default-features = false, features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "log-04"
] }

esp-bootloader-esp-idf = { version = "0.5.0", default-features = false, features = ["esp32c3", "log-04"] }
log		       = "0.4.27"

embassy-net = { version = "0.9.1", default-features = false, features = [
  "dhcpv4",
  "log",
  "tcp",
] }
embedded-io = {version = "0.7.1", default-features = false}
embedded-io-async = {version = "0.7.0", default-features = false}
esp-alloc = {version = "0.10.0", default-features = false, features = ["compat", "global-allocator"]}
esp-println = { version = "0.17.0", default-features = false, features = [
	"esp32c3", "log-04", "uart"
]}
embassy-executor = { version = "0.10.0", default-features = false, features = ["log"] }
embassy-time = { version = "0.5.0", default-features = false, features = ["log"] }
esp-radio = { version = "0.18.0", default-features = false, features = [
  "esp-alloc",
  "esp32c3",
  "log-04",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "log",
  "proto-dhcpv4",
  "proto-ipv4",
  "socket-tcp",
] }

critical-section = {version = "1.2.0", default-features = false}
static_cell      = {version = "2.1.1", default-features = false}
embedded-websocket = { version  = "0.9.5", default-features = false }
embassy-sync = {version = "0.8.0", default-features = false}
serde = { version = "1.0.228", default-features = false }
embassy-futures = {version = "0.1.2", default-features = false}
smart-leds = {version = "0.4.0", default-features = false}
libm = {version = "0.2.16", default-features = false}
serde-json-core = {version = "0.6.0", default-features = false}
esp-hal-smartled = { git = "https://github.com/Tropicao/esp-hal-community", rev= "6a02de8f708c40d30cda7cbcf3be6c415a3f7ea4" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 0
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 'z'
overflow-checks  = false
strip            = true
